--- a/examples/kubernetes/connectivity-check/echo-b.yaml
+++ b/examples/kubernetes/connectivity-check/echo-b.yaml
@@ -41,4 +41,4 @@ spec:
         imagePullPolicy: IfNotPresent
         readinessProbe:
           exec:
-            command: ["curl", "-sS", "-o", "/dev/null", "localhost"]
+            command: ["curl", "-sS", "--fail", "-o", "/dev/null", "localhost"]
