--- a/examples/kubernetes/connectivity-check/pod-to-a-allowed.yaml
+++ b/examples/kubernetes/connectivity-check/pod-to-a-allowed.yaml
@@ -19,10 +19,10 @@ spec:
         imagePullPolicy: IfNotPresent
         livenessProbe:
           exec:
-            command: ["curl", "-sS", "-o", "/dev/null", "echo-a"]
+            command: ["curl", "-sS", "--fail", "-o", "/dev/null", "echo-a"]
         readinessProbe:
           exec:
-            command: ["curl", "-sS", "-o", "/dev/null", "echo-a"]
+            command: ["curl", "-sS", "--fail", "-o", "/dev/null", "echo-a"]
 ---
 apiVersion: "cilium.io/v2"
 kind: CiliumNetworkPolicy
