--- a/examples/kubernetes/connectivity-check/pod-to-a-denied.yaml
+++ b/examples/kubernetes/connectivity-check/pod-to-a-denied.yaml
@@ -20,11 +20,11 @@ spec:
         livenessProbe:
           timeoutSeconds: 7
           exec:
-            command: ["ash", "-c", "! curl -sS --connect-timeout 5 -o /dev/null echo-a"]
+            command: ["ash", "-c", "! curl -sS --fail --connect-timeout 5 -o /dev/null echo-a"]
         readinessProbe:
           timeoutSeconds: 7
           exec:
-            command: ["ash", "-c", "! curl -sS --connect-timeout 5 -o /dev/null echo-a"]
+            command: ["ash", "-c", "! curl -sS --fail --connect-timeout 5 -o /dev/null echo-a"]
 ---
 apiVersion: "cilium.io/v2"
 kind: CiliumNetworkPolicy
