bpf: improve ipsec compilation coverage to catch warnings early
Add a few missing combinations.

Signed-off-by: Daniel Borkmann <daniel@iogearbox.net>

--- a/bpf/Makefile
+++ b/bpf/Makefile
@@ -39,11 +39,14 @@ LB_OPTIONS = \
 	-DENABLE_IPV6:-DLB_L4 \
 	-DENABLE_IPV6:-DLB_L3:-DLB_L4 \
 	-DENABLE_IPV6:-DENABLE_IPSEC \
+	-DENABLE_IPV4:-DENABLE_IPV6 \
+	-DENABLE_IPV4:-DENABLE_IPV6:-DENABLE_IPSEC \
 	-DENABLE_IPV4:-DENABLE_IPV6:-DLB_L3 \
 	-DENABLE_IPV4:-DENABLE_IPV6:-DLB_L4 \
 	-DENABLE_IPV4:-DENABLE_IPV6:-DLB_L3:-DLB_L4 \
 	-DENABLE_IPV4:-DENABLE_IPV6:-DLB_L3:-DLB_L4:-DENABLE_HOST_SERVICES_UDP \
 	-DENABLE_IPV4:-DENABLE_IPV6:-DLB_L3:-DLB_L4:-DENABLE_HOST_SERVICES_TCP \
+	-DENABLE_IPV4:-DENABLE_IPV6:-DLB_L3:-DLB_L4:-DENABLE_IPSEC:-DENABLE_ENCAP_HOST_REMAP \
 	-DENABLE_IPV4:-DENABLE_IPV6:-DLB_L3:-DLB_L4:-DENABLE_HOST_SERVICES_UDP:-DENABLE_NODEPORT \
 	-DENABLE_IPV4:-DENABLE_IPV6:-DLB_L3:-DLB_L4:-DENABLE_HOST_SERVICES_TCP:-DENABLE_NODEPORT \
 	-DENABLE_IPV4:-DENABLE_IPV6:-DLB_L3:-DLB_L4:-DENABLE_HOST_SERVICES_UDP:-DENABLE_HOST_SERVICES_TCP \
@@ -129,13 +132,16 @@ LXC_OPTIONS = \
 	 -DHAVE_LPM_TRIE_MAP_TYPE \
 	 -DHAVE_LRU_HASH_MAP_TYPE \
 	 -DENABLE_IPV4 \
+	 -DENABLE_IPV4:-DENABLE_IPSEC \
 	 -DENABLE_IPV4:-DHAVE_LPM_TRIE_MAP_TYPE \
 	 -DENABLE_IPV4:-DHAVE_LPM_TRIE_MAP_TYPE:-DHAVE_LRU_HASH_MAP_TYPE \
 	 -DENABLE_IPV6 \
+	 -DENABLE_IPV6:-DENABLE_IPSEC \
 	 -DENABLE_IPV6:-DHAVE_LPM_TRIE_MAP_TYPE \
 	 -DENABLE_IPV6:-DHAVE_LPM_TRIE_MAP_TYPE:-DHAVE_LRU_HASH_MAP_TYPE \
 	 -DENABLE_IPV6:-DENABLE_IPV4 \
 	 -DENABLE_IPV6:-DENABLE_IPV4:-DENABLE_ROUTING \
+	 -DENABLE_IPV6:-DENABLE_IPV4:-DENABLE_IPSEC:-DENABLE_ENCAP_HOST_REMAP \
 	 -DENABLE_IPV4:-DENABLE_IPV6:-DHAVE_LPM_TRIE_MAP_TYPE:-DHAVE_LRU_HASH_MAP_TYPE \
 	 -DENABLE_HOST_REDIRECT:-DENABLE_IPV4:-DENABLE_IPV6 \
 	 -DENABLE_HOST_REDIRECT:-DENABLE_IPV4:-DENABLE_IPV6:-DENABLE_NAT46 \
