cilium, contrib: tighten permissions on systemd bpffs mount unit file
Given bpf fs wasn't mounted before, then mount it with stricter
permissions than the default ones (777). Also add few other options
as discussed in #10793 such as `nosuid,nodev,noexec` though at least
from bpf fs side these are ignored.

Fixes: #10793
Reported-by: Travis Glenn Hansen <travisghansen@yahoo.com>
Signed-off-by: Daniel Borkmann <daniel@iogearbox.net>

--- a/install/kubernetes/cilium/charts/nodeinit/templates/daemonset.yaml
+++ b/install/kubernetes/cilium/charts/nodeinit/templates/daemonset.yaml
@@ -112,6 +112,7 @@ spec:
               What=bpffs
               Where=/sys/fs/bpf
               Type=bpf
+              Options=rw,nosuid,nodev,noexec,relatime,mode=700
 
               [Install]
               WantedBy=multi-user.target
