--- a/plugins/Makefile
+++ b/plugins/Makefile
@@ -5,13 +5,13 @@ SUBDIRS = cilium-docker cilium-cni
 all: $(SUBDIRS)
 
 $(SUBDIRS): force
-	@ $(MAKE) -C $@ all
+	@ $(MAKE) $(SUBMAKEOPTS) -C $@ all
 
 clean:
-	for i in $(SUBDIRS); do $(MAKE) -C $$i clean; done
+	$(QUIET)for i in $(SUBDIRS); do $(MAKE) $(SUBMAKEOPTS) -C $$i clean; done
 
 install:
-	for i in $(SUBDIRS); do $(MAKE) -C $$i install; done
+	$(QUIET)for i in $(SUBDIRS); do $(MAKE) $(SUBMAKEOPTS) -C $$i install; done
 
 .PHONY: force
 force :;
