docs: Add dependencies to builder target
This allows make to determine when to run this target depending on the
files that change.

Signed-off-by: Joe Stringer <joe@cilium.io>

--- a/Documentation/Makefile
+++ b/Documentation/Makefile
@@ -7,7 +7,7 @@ default: html
 clean:
 	-$(QUIET)rm -rf _build
 
-builder-image:
+builder-image: Dockerfile requirements.txt
 	$(QUIET)tar c requirements.txt Dockerfile \
 	  | docker build --tag cilium/docs-builder -
 
