build: Cleanup Makefiles of Go components
- ensure the copyright header is present
- improve variable naming in `Makefile.defs`
- standardise go invocations with `GO_BUILD`, `GO_TEST`, etc
- remove dependency declaration as `go build` manages build
  cache much more intelligently now and makefile maintenance
  overhead is unnecessary
- ensure all of the common rules are defined consistently,
  so these can be sourced into a common file in the future
- remove trailing and doubly blank lines

Signed-off-by: Ilya Dmitrichenko <errordeveloper@gmail.com>

--- a/daemon/Makefile
+++ b/daemon/Makefile
@@ -1,14 +1,29 @@
-# GOBUILD relies on the order of makefile list to get VERSION file
+# Copyright 2017-2020 Authors of Cilium
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
 include ../Makefile.defs
 
-TARGET=cilium-agent
-LINKS=cilium-node-monitor
-SOURCES := $(shell find ../api ../common ../daemon ../pkg . \( -name '*.go'  ! -name '*_test.go' \))
-$(TARGET): $(SOURCES) ../Dockerfile ../Makefile ../Makefile.defs Makefile
-	@$(ECHO_GO)
-	$(QUIET)$(GO) build $(GOBUILD) -o $(TARGET)
+TARGET := cilium-agent
+LINKS := cilium-node-monitor
 
 all: $(TARGET) links
+
+.PHONY: all $(TARGET) links
+
+$(TARGET): ../Dockerfile ../Makefile ../Makefile.defs Makefile
+	@$(ECHO_GO)
+	$(QUIET)$(GO_BUILD) -o $(TARGET)
 
 links:
 	$(foreach link,$(LINKS), ln -f -s $(TARGET) $(link) || cp $(TARGET) $(link);)
@@ -16,7 +31,7 @@ links:
 clean:
 	@$(ECHO_CLEAN)
 	$(QUIET)rm -f $(TARGET)
-	$(QUIET)$(GO) clean $(GOCLEAN)
+	$(QUIET)$(GO_CLEAN)
 	$(foreach link,$(LINKS), $(QUIET)rm -f $(link);)
 
 ifeq ("$(PKG_BUILD)","")
