--- a/Makefile.defs
+++ b/Makefile.defs
@@ -47,6 +47,14 @@ endif
 
 GO ?= go
 
+# go build/test/clean flags
+# these are declared here so they are treated explicitly
+# as non-immediate variables
+GO_BUILD_FLAGS = 
+GO_TEST_FLAGS = 
+GO_CLEAN_FLAGS = 
+GO_BUILD_LDFLAGS = 
+
 VERSION = $(shell cat $(dir $(lastword $(MAKEFILE_LIST)))/VERSION)
 VERSION_MAJOR = $(shell cat $(dir $(lastword $(MAKEFILE_LIST)))/VERSION | cut -d. -f1)
 # Use git only if in a Git repo
