detect if k8s event handlers modify read-only objects
k8s libraries provide a mechanism to detect if object handlers are
modifying objects that are read only. We will enable this
functionality by default in our CI to avoid these accidental writes.

Signed-off-by: André Martins <andre@cilium.io>

--- a/install/kubernetes/cilium/values.yaml
+++ b/install/kubernetes/cilium/values.yaml
@@ -435,3 +435,8 @@ global:
     # See https://github.com/cilium/hubble/blob/master/Documentation/metrics.md for more comprehensive
     # documentation about Hubble's metric collection.
     metrics: []
+
+  # CI specific options: DO NOT USE IN PRODUCTION.
+  ci:
+    # Make Cilium panic if objects received by k8s are modified.
+    kubeCacheMutationDetector: false
